--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -2,7 +2,7 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
     flex-wrap: nowrap;
     position: fixed;
@@ -27,6 +27,17 @@
     visibility: visible;
 }
 
+.heading {
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: .75px;
+    line-height: 14px;
+    display: block;
+    width: 100%;
+    padding: 9px 16px;
+}
+
 
 
 .sidebarMenu {
@@ -35,16 +46,67 @@
 }
 
 .sidebarMenu li {
-    padding: 10px 20px;
-    border-bottom: 1px solid #444;
+    display: flex;
+    align-items: center;
+    height: 40px;
+    line-height: 40px;
+    font-size: 15px;
+    letter-spacing: .5px;
+    border-left: 4px solid rgba(0,0,0,0);
+    padding: 0 16px 0 12px;
 }
 
 .sidebarMenu li a {
     color: #000000;
     text-decoration: none;
     display: block;
+    font-size: 15px;
 }
 
-.sidebarMenu li a:hover {
-    background-color: #575757;
+
+.sidebarMenu li:hover {
+    background-color: #cbcbcb46;
+    border-left: 4px solid rgb(106, 173, 255);
+}
+
+.menu {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    padding: 0;
+}
+.line {
+    fill: none;
+    stroke: black;
+    stroke-width: 6;
+    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+    stroke-dasharray: 60 207;
+    stroke-width: 6;
+}
+.line2 {
+    stroke-dasharray: 60 60;
+    stroke-width: 6;
+}
+.line3 {
+    stroke-dasharray: 60 207;
+    stroke-width: 6;
+}
+.opened .line1 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 6;
+}
+.opened .line2 {
+    stroke-dasharray: 1 60;
+    stroke-dashoffset: -30;
+    stroke-width: 6;
+}
+.opened .line3 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 6;
 }
