--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -83,8 +83,8 @@
   
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   .logo {
     filter: invert(1);
   }
-}
+} */
