--- a/src/app/spelling-bee/spelling-bee.css
+++ b/src/app/spelling-bee/spelling-bee.css
@@ -17,7 +17,8 @@
 }
 
 .hiveContainer {
-    width: 90%;
+    width: 250px;
+    max-height: 300px;
     margin: 25px auto;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-user-select: none;
@@ -27,7 +28,8 @@
 
 .hive {
     position: relative;
-    max-width: 300px;
+   
+
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 103.9230484542%;
@@ -119,7 +121,9 @@
 }
 
 .spellingBeeContainer {
-    margin-top: 50px;
+    position: relative;
+    z-index: 0;
+    margin-top: 170px;
     display: flex;
     /* grid-template-columns: 1.4fr 1fr; */
     width: 90%;
@@ -143,5 +147,29 @@
         opacity: 0;
     }
 }
+
+.add {
+    animation: 400ms add;
+}
+
+
+.invalid {
+    color: #dcdcdc;
+}
+
+@keyframes add {
+    0%{
+        opacity: 0;
+        transform: translateY(10%);
+        display: none;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
 
 
