--- a/src/components/welcome/Welcome.css
+++ b/src/components/welcome/Welcome.css
@@ -14,6 +14,7 @@
     font-family: "Open Sans", sans-serif;
     font-weight: 800;
     transition: 0.5s;
+    z-index: 100;
 
 }
 
@@ -37,6 +38,7 @@
     margin-top: auto;
     justify-content: center;
     align-items: center;
+    align-self: center;
     
     margin-bottom: auto;
     opacity: 0;
